# usmc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_de.md  SECURITY.md  TODO.md  ellmos-module.v2.json  llms.txt  pyproject.toml
.github/workflows/: ci.yml  welcome.yml
tests/: test_api.py  test_cli.py  test_client.py  test_paths.py  test_repository_hygiene.py
usmc/: __init__.py  api.py  cli.py  client.py  schema.py
